# sqlite-fastx

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  test.fa.fai
.github/workflows/: ci.yml  release.yml
benches/: fastx_bench.rs  nucleodb_bench.rs
docs/adr/: 0001-runtime-polymorphic-readers.md  0002-explicit-descriptor-column-op.md  0003-replace-fmindex-with-kmer-inverted.md
src/: fai.rs  fasta.rs  fastq.rs  filters.rs  functions.rs  lib.rs  reader.rs
tests/: integration.rs
tests/fixtures/: sample.fa  sample.fa.gz.fai  sample.fastq  sample.fastq.gz.fai  sample.fastq.gz.gzi  test.fa  test.fastq  test.fastq.fai
