[package]
name = "nucleodb"
version = "0.1.0"
edition = "2024"

[dependencies]
seq_io = "0.3.4"
sqlite3_ext = "0.2.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
sqlite3_ext = { version = "0.2.0", features = ["static"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "nucleodb_bench"
harness = false
